# pyjoy-lang

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: build-test.yml
docs/: comparison-with-joy.md  joy-manual.txt  pyjoy.md  pythonic-mode.md
scripts/: check_c_coverage.py  parse_joy_manual.py
src/pyjoy/: __init__.py  __main__.py  evaluator.py  parser.py  primitives.py  repl.py  scanner.py  stack.py  types.py
tests/: conftest.py  test_c_backend.py  test_combinators.py  test_definitions.py  test_evaluator.py  test_io.py  test_parser.py  test_primitives.py  test_recursion.py  test_scanner.py  test_stack.py  test_stdlib.py  test_types.py
tests/examples/: demo.joy  fact.joy  primrec-test.joy  test-ack.joy  test-base.joy  test-clrack.joy  test-clrack2.joy  test-clrack3.joy  test-condlinrec.joy  test-condlinrec2.joy  test-condlinrec3.joy  test-condlinrec4.joy  test-condlinrec5.joy  test-condlinrec6.joy  test-hamilhyp.joy  test-hamilhyp2.joy  test-hamilhyp3.joy  test-ifte-else.joy  test-ifte.joy  test-mcc91.joy  test-nestrec-part1.joy  test-nestrec-part2.joy  test-nestrec-part3.joy  test-nestrec-part4.joy  test-nestrec-part5.joy  test-nestrec-part6.joy  test-nestrec-part7.joy  test-swoncat.joy  test-userdef.joy  test-x.joy  test-xfact.joy  test-y-step.joy  test-y-step2.joy  test-y-step3.joy  test-y-step4.joy  test-y.joy  test-y2.joy  test-yack.joy
tests/joy/: fclose.joy  feof.joy  ferror.joy  fgetch.joy  fgets.joy  filetime.joy  fput.joy  fputch.joy  fputchars.joy  fputstring.joy  fread.joy  fremove.joy  frename.joy  (+3 more)
(+19 files in other folders)
