[project]
name = "pyjoy"
version = "0.1.0"
description = "An accurate Python implementation of the Joy programming language"
readme = "docs/pyjoy.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pyjoy = "pyjoy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyjoy"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "ty>=0.0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
